--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -32,12 +32,12 @@ p {
 ::-webkit-scrollbar-track {
   /* margin-right: 5px; */
   margin: 0.5;
-  background: #ffffff;
+  background: rgba(0);
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background-image: linear-gradient(0deg, #fd1d1d, #fcb045);
+  background: rgba(0);
   border-radius: 100px;
 }
 
